--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .login
 {
     background-image: url('css/wp2180140.jpeg'); 
@@ -8,16 +9,17 @@
 .login_main
 {
     position: absolute;
-    left: 0;
+    left: 40px;
     right: 0;
-    top: 350px;
+    top: 80px;
     bottom: 0;
     text-align: center;
 }
 .login_main h1
 {
-padding: 10px;
-color:green;
+color:#006600;
+margin-top: 200px;
+font-size: 60px;
 }
 .game
 {
@@ -127,4 +129,90 @@ text-align: center;
     background:#222;
     color:white !important;
     border-radius:0px;
+}
+
+form 
+{
+    /* Center the form on the page */
+    margin: auto;
+    width: 400px;
+    padding:300px;
+    align-content: center;
+    
+    }
+
+
+    
+ul{
+    list-style: none;
+    }
+
+.form
+{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 60px;
+    bottom: 0;
+    text-align: center;
+}
+
+input[type=text]:focus {
+    background-color: lightblue;
+  }
+
+.play {
+    background-color: #4caf4fde;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.return {
+    background-color: #f1ed12b6;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.register{
+    background-color: #0d0e0dde;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+input
+{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
+
+.signup
+{
+    background-image: url('css/wp2180140.jpeg'); 
+    background-repeat: no-repeat; 
+    background-attachment: fixed; 
+    background-size: cover; 
+}
+
+label
+{
+    font-size: 40px;
+    font-style: normal;
+    font-family: fantasy;
+    }
+
+.returnPage
+{
+    width: 1080px;
+    margin: 0 auto;
 }
