--- a/main.css
+++ b/main.css
@@ -2,23 +2,24 @@
 .login
 {
     background-image: url('css/wp2180140.jpeg'); 
+    opacity: 20;
     background-repeat: no-repeat; 
     background-attachment: fixed; 
     background-size: cover;
 }
 .login_main
 {
-    position: absolute;
-    left: 40px;
-    right: 0;
-    top: 80px;
+    position: relative;
+    left: 10px;
+    top: 0px;
     bottom: 0;
     text-align: center;
 }
 .login_main h1
 {
-color:#006600;
-margin-top: 200px;
+color:#000000;
+font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+margin-top: 140px;
 font-size: 60px;
 }
 .game
@@ -149,11 +150,9 @@ ul{
 
 .form
 {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 60px;
-    bottom: 0;
+    position: relative;
+ 
+    bottom: 300px;
     text-align: center;
 }
 
@@ -198,6 +197,12 @@ input
 
 .signup
 {
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 150px;
+    bottom: 0;
+    text-align: center;
     background-image: url('css/wp2180140.jpeg'); 
     background-repeat: no-repeat; 
     background-attachment: fixed; 
